--- a/ll-model/build.gradle
+++ b/ll-model/build.gradle
@@ -49,6 +49,7 @@ repositories {
 //---------------------------------------------------------------------------------------------------------------------------------
 dependencies {
 	compile("org.springframework.boot:spring-boot-starter-data-jpa:${springBootVersion}")
+	compile("org.springframework.boot:spring-boot-starter-data-rest:${springBootVersion}")
 	compile("com.h2database:h2:1.3.156")
     testCompile("org.springframework.boot:spring-boot-starter-test:${springBootVersion}") 
 }
