--- a/ll-web/build.gradle
+++ b/ll-web/build.gradle
@@ -52,7 +52,7 @@ configurations {
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-actuator:${springBootVersion}") // Adds additional, useful endpoints
 	compile("org.springframework.boot:spring-boot-starter-aop:${springBootVersion}")
-    compile("org.springframework.boot:spring-boot-starter-data-rest:${springBootVersion}")
+    //compile("org.springframework.boot:spring-boot-starter-data-rest:${springBootVersion}")
 	compile("com.ricardorodriguezfl.lunchnlearn:ll-model:0.0.1")
     providedRuntime("org.springframework.boot:spring-boot-starter-tomcat:${springBootVersion}")
     testCompile("org.springframework.boot:spring-boot-starter-test:${springBootVersion}")
