--- a/ll-model/build.gradle
+++ b/ll-model/build.gradle
@@ -8,11 +8,11 @@
 //---------------------------------------------------------------------------------------------------------------------------------
 buildscript {
     ext {
-        springBootVersion = '1.2.5.RELEASE'
+        springBootVersion = '1.3.5.RELEASE'
 		wrapperVersion = '2.3'
 		jarGroupId = 'com.ricardorodriguezfl.lunchnlearn'
 		jarArtifactId = 'll-model'
-		jarVersion = '0.0.1'
+		jarVersion = '0.0.2'
     }
     repositories {
         mavenCentral()
@@ -50,6 +50,8 @@ repositories {
 dependencies {
 	compile("org.springframework.boot:spring-boot-starter-data-jpa:${springBootVersion}")
 	compile("org.springframework.boot:spring-boot-starter-data-rest:${springBootVersion}")
+	compile("io.springfox:springfox-swagger-ui:2.2.2")
+	compile("io.springfox:springfox-swagger2:2.2.2")
 	compile("com.h2database:h2:1.3.156")
     testCompile("org.springframework.boot:spring-boot-starter-test:${springBootVersion}") 
 }
