Updated .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,13 @@ ll-web/.idea/artifacts/Gradle___ll_web_0_0_1_war__exploded_.xml
 ll-web/.idea/copyright/profiles_settings.xml
 ll-web/.idea/modules/ll-web.iml
 ll-web/src/main/main.iml
+.gradle/2.9/taskArtifacts/cache.properties
+.gradle/2.9/taskArtifacts/cache.properties.lock
+.gradle/2.9/taskArtifacts/fileHashes.bin
+.gradle/2.9/taskArtifacts/fileSnapshots.bin
+.gradle/2.9/taskArtifacts/outputFileStates.bin
+.gradle/2.9/taskArtifacts/taskArtifacts.bin
+.idea/gradle.xml
+.idea/modules/SimpleBoot.iml
+ll-web/.idea/artifacts/Gradle___ll_web_0_0_2_war.xml
+ll-web/.idea/artifacts/Gradle___ll_web_0_0_2_war__exploded_.xml
